@startuml

class User {
  {field} ID <b>Identifier</b>
}

class Wallet {
    {field} ID <b>Identifier</b>
    {field} User <b>*User</b>
    {field} Balance <b>Money</b>
    {field} Cards <b>[]*Card</b>
    {method} Spend() <b>CardSpendHistory</b>
}

Wallet *-- User
Wallet *-- Card
Wallet *-- FindLastCardSpendRepo

interface FindLastCardSpendRepo {
    {method} <b>FindLastCardSpend()</b>
}

class Card {
    {field} ID <b>Identifier</b>
    {field} LimitAmount <b>Money</b>
    {field} LimitDuration <b>LimitTimeEnum</b>
}

Card *-- LimitTimeEnum

class CardSpendHistory {
    {field} TransactionID <b>Identifier</b>
    {field} User <b>*User</b>
    {field} Cards <b>*Card</b>
    {field} Amount <b>Money</b>
    {field} BalanceRemaining <b>Money</b>
    {field} Date <b>time.Time</b>
}

CardSpendHistory *-- User
CardSpendHistory *-- Card

class Team {
   {field} ID <b>Identifier</b>
   {field} Wallet <b>*Wallet</b>
}

Team *-- Wallet

class UserTeam {
	{field} User <b>*User</b>
	{field} Team <b>*Team</b>
	{field} Role <b>UserTeamRole</b>
}

UserTeam *-- User
UserTeam *-- Team
UserTeam *-- UserTeamRole

class Identifier {
	{field} <b>string</b>
}

class Money {
	{field} <b>float64</b>
}

enum LimitTimeEnum {
    <b>Daily</b>
    <b>Weekly</b>
    <b>Monthly</b>
}

enum UserTeamRole {
    <b>Admin</b>
    <b>Member</b>
}

@enduml